# meok-nis2-de-register-mcp

./: Dockerfile  README.md  glama.json  pyproject.toml  sbom.cdx.json  server.json  server.py  smithery.yaml
